--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,51 @@
 .App {
-  text-align: center;
+  margin: 25px;
+  box-sizing: border-box;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.todo-table-container {
+  padding-bottom: 100px;
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+}
+.todo-card-column {
+  border: 3px solid rgba(0, 0, 0, 0.8);
+  margin: 4px;
+  width: 400px;
+}
+.todo-card {
+  margin-bottom: 8px;
+  border-radius: 0.25rem;
+}
+.column-title {
+  padding-left: 10px;
+  padding-bottom: 10px;
+  margin: 15px 0 15px 0;
+  border-bottom: 2px dotted rgba(0, 0, 0, 0.8);
+}
+.modal {
+  display: block;
+  animation: fadeIn 1s ease both;
+  background: rgb(255 255 255 / 60%);
+  backdrop-filter: blur(2px);
+	&::backdrop {
+		animation: fadeIn 1s ease both;
+	}
+}
+.addBtn-container {
+  display: flex;
+  justify-content: center;
+}
+.addBtn {
+  width: 12%;
 }
 
-.App-link {
-  color: #61dafb;
+@keyframes fadeIn {
+	from {
+		opacity: 0;
+	}
+	to {
+		opacity: 1;
+	}
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
+
